Add install instruction

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading text-danger">CWEP</h1>
+                        <h1 class="brand-heading text-primary">CWEP</h1>
                         <p class="intro-text">A free, must have chrome extension for Framgia's Members.</p>
                         <div class="page-scroll">
                             <a href="#about" class="btn btn-circle">
@@ -93,6 +93,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2 class="text-success">Download Chatwork Emoticons Plus</h2>
                     <p>You can download Chatwork Emoticons Plus for free with the link bellow !</p>
+                    <p>After downloading, go to chrome://extensions/ , and then drag the CWEP extension to that page to install</p>
                     <a href="files/CWEP.crx" class="btn btn-default btn-lg">Download</a>
                 </div>
             </div>
