Add dev team info

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2 class="text-success">Download Chatwork Emoticons Plus</h2>
                     <p>You can download Chatwork Emoticons Plus for free with the link bellow !</p>
-                    <p>After downloading, go to chrome://extensions/ , and then drag the CWEP extension to that page to install</p>
+                    <p class="text-warning">■　After downloading, go to chrome://extensions/ , and then drag the CWEP extension to that page to install<br/>
+                    ■　Remember to remove previous version when you install new one!!!</p>
                     <a href="release/CWEP.crx" class="btn btn-default btn-lg">Download</a>
                 </div>
             </div>
@@ -105,7 +106,9 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2 class="text-success">Contact Dev Team</h2>
                 <p>Feel free to email us to provide some feedback on our extension, give us suggestions for new emoticons, or to just say hello!</p>
-                <a href="mailto:nguyen.anh.tien@framgia.com">nguyen.anh.tien@framgia.com</p>
+                <p>
+                <a href="mailto:nguyen.anh.tien@framgia.com">■　nguyen.anh.tien@framgia.com<br/>
+                <a href="mailto:nguyen.thanh.tung@framgia.com">■　nguyen.thanh.tung@framgia.com</p>                
                 <ul class="list-inline banner-social-buttons">                    
                     <li><a href="https://github.com/wataridori/cwep" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>                    
