--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <h2 class="text-success">Download Chatwork Emoticons Plus</h2>
                     <p>You can download Chatwork Emoticons Plus for free with the link bellow !</p>
                     <p>After downloading, go to chrome://extensions/ , and then drag the CWEP extension to that page to install</p>
-                    <a href="files/CWEP.crx" class="btn btn-default btn-lg">Download</a>
+                    <a href="release/CWEP.crx" class="btn btn-default btn-lg">Download</a>
                 </div>
             </div>
         </div>
