Add emoticons list

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                         <a href="#download">Download</a>
                     </li>
                     <li class="page-scroll">
+                        <a href="#emoticons">Emoticons</a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
                 </ul>
@@ -80,9 +83,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2 class="text-success">About Chatwork Emoticons Plus</h2>
-                <p>Chatwork Emoticons Plus is a free Chrome Extension which provides more funny emoticons for Chatwork. It is made by Framgia's Members, and for Framgia's Members.</p>
-                <h2 class="text-success">List of Emoticons</h2>
-                <p>Update soon</p>
+                <p>Chatwork Emoticons Plus is a free Chrome Extension which provides more funny emoticons for Chatwork. It is made by Framgia's Members, and for Framgia's Members.</p>                
             </div>
         </div>
     </section>
@@ -97,6 +98,72 @@
                     ■　Remember to remove previous version when you install new one!!!</p>
                     <a href="release/CWEP.crx" class="btn btn-default btn-lg">Download</a>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="emoticons" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2 class="text-success">List of Emoticons</h2>
+                <table class="table">
+                <tr>
+                    <td>(framgia)</td>
+                    <td><img src="img/emoticons/framgia.png"></td>                    
+                </tr>   
+                <tr>
+                    <td>(facepalm)</td>
+                    <td><img src="img/emoticons/facepalm.gif"></td>                    
+                </tr>
+                <tr>
+                    <td>(facepalm2)</td>
+                    <td><img src="img/emoticons/facepalm2.gif"></td>                    
+                </tr>                
+                <tr>
+                    <td>(dull)</td>
+                    <td><img src="img/emoticons/dull.gif"></td>                    
+                </tr>
+                <tr>
+                    <td>(finger)</td>
+                    <td><img src="img/emoticons/finger.gif"></td>                    
+                </tr>
+                <tr>
+                    <td>(hehehe)</td>
+                    <td><img src="img/emoticons/hehehe.gif"></td>                    
+                </tr>
+                <tr>
+                    <td>(honho)</td>
+                    <td><img src="img/emoticons/honho.gif"></td>                    
+                </tr>
+                <tr>
+                    <td>(mooning)</td>
+                    <td><img src="img/emoticons/mooning.gif"></td>                    
+                </tr>                
+                <tr>
+                    <td>(pacman)</td>
+                    <td><img src="img/emoticons/pacman.png"></td>                    
+                </tr>
+                <tr>
+                    <td>(plusone)</td>
+                    <td><img src="img/emoticons/plusone.png"></td>                    
+                </tr>
+                <tr>
+                    <td>(silly)</td>
+                    <td><img src="img/emoticons/silly.gif"></td>                    
+                </tr>
+                <tr>
+                    <td>(uongthuoc)</td>
+                    <td><img src="img/emoticons/uongthuoc.png"></td>                    
+                </tr>       
+                <tr>
+                    <td>(airblade)</td>
+                    <td><img src="img/emoticons/airblade.gif"></td>                    
+                </tr>
+                <tr>
+                    <td>(noinham)</td>
+                    <td><img src="img/emoticons/noinham.png"></td>                    
+                </tr>                   
+                </table>
             </div>
         </div>
     </section>
