--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading text-primary">CWEP</h1>
-                        <p class="intro-text">A free, must have chrome extension for Framgia's Members.</p>
+                        <p class="intro-text">A free, Must-have Chrome extension for Framgia's Members.</p>
                         <div class="page-scroll">
                             <a href="#about" class="btn btn-circle">
                                 <i class="fa fa-angle-double-down animated"></i>
