--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2 class="text-success">Download Chatwork Emoticons Plus</h2>
                     <p>You can download Chatwork Emoticons Plus for free with the link bellow !</p>
-                    <p class="text-warning">■　After downloading, go to chrome://extensions/ , and then drag the CWEP extension to that page to install<br/>
-                    ■　Remember to remove previous version when you install new one!!!</p>
-                    <a href="release/CWEP.crx" class="btn btn-default btn-lg">Download</a>
+                    <p>After downloading, go to chrome://extensions/ , and then drag the CWEP extension to that page to install</p>
+                    <a href="release/CWEP.crx" class="btn btn-default btn-lg">Download (v0.1.3)</a>
                 </div>
             </div>
         </div>
