--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2 class="text-success">Download Chatwork Emoticons Plus</h2>
                     <p>You can download Chatwork Emoticons Plus for free with the link bellow !</p>
-                    <p>After downloading, go to chrome://extensions/ , and then drag the CWEP extension to that page to install</p>
-                    <a href="release/CWEP.crx" class="btn btn-default btn-lg">Download (v0.1.3)</a>
+                    <p class="text-warning">■　After downloading, go to chrome://extensions/ , and then drag the CWEP extension to that page to install<br/>
+                    ■　To update extension, go to chrome://extensions/ page, turn on Developer mode and click "Update extensions now"</p> 
+                    <a href="release/CWEP.crx" class="btn btn-default btn-lg">Download (v0.1.3)</a>                                    
                 </div>
             </div>
         </div>
@@ -161,7 +162,11 @@
                 <tr>
                     <td>(noinham)</td>
                     <td><img src="img/emoticons/noinham.png"></td>                    
-                </tr>                   
+                </tr>
+                <tr>
+                    <td>(rofl)</td>
+                    <td><img src="img/emoticons/rofl.gif"></td>                    
+                </tr>                    
                 </table>
             </div>
         </div>
