--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <p>You can download Chatwork Emoticons Plus for free with the link bellow !</p>
                     <p class="text-warning">■　After downloading, go to chrome://extensions/ , and then drag the CWEP extension to that page to install<br/>
                     ■　To update extension, go to chrome://extensions/ page, turn on Developer mode and click "Update extensions now"</p> 
-                    <a href="release/CWEP.crx" class="btn btn-default btn-lg">Download (v0.1.3)</a>                                    
+                    <a href="release/CWEP.crx" class="btn btn-default btn-lg">Download (v0.1.4)</a>                                    
                 </div>
             </div>
         </div>
@@ -105,7 +105,7 @@
     <section id="emoticons" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2 class="text-success">List of Emoticons</h2>
+                <h2 class="text-success">List of Emoticons (Updating...)</h2>
                 <table class="table">
                 <tr>
                     <td>(framgia)</td>
