--- a/index.html
+++ b/index.html
@@ -166,8 +166,54 @@
                 <tr>
                     <td>(rofl)</td>
                     <td><img src="img/emoticons/rofl.gif"></td>                    
+                </tr>
+                <tr>
+                    <td>(ifyouknowwhatimean)</td>
+                    <td><img src="img/emoticons/ifyouknowwhatimean.png"></td>
+                </tr>
+                <tr>
+                    <td>(iitomo)</td>
+                    <td><img src="img/emoticons/iitomo.gif"></td>
+                </tr>
+                <tr>
+                    <td>(imadesho)</td>
+                    <td><img src="img/emoticons/imadesho.jpeg"></td>
+                </tr>
+                <tr>
+                    <td>(sleepy)</td>
+                    <td><img src="img/emoticons/sleepy.gif"></td>
+                </tr>
+                <tr>
+                    <td>(venhvao)</td>
+                    <td><img src="img/emoticons/venhvao.gif"></td>
                 </tr>                    
                 </table>
+                <p>And list of original Yahoo icons, including <ul class="text-info list-unstyled row">
+<li class="col-xs-2">%-(</li>
+<li class="col-xs-2">:-??</li>
+<li class=" col-xs-2">:@)</li>
+<li class=" col-xs-2">3:-O</li>
+<li class=" col-xs-2">@};-</li>
+<li class=" col-xs-2">%%-</li>
+<li class=" col-xs-2">(~~)</li>
+<li class=" col-xs-2">~O)</li>
+<li class=" col-xs-2">8-X</li>
+<li class=" col-xs-2">:-L</li>
+<li class=" col-xs-2">$-)</li>
+<li class=" col-xs-2">b-(</li>
+<li class=" col-xs-2">[-X</li>
+<li class=" col-xs-2">:-@</li>
+<li class=" col-xs-2">:-j</li>
+<li class=" col-xs-2">:bz</li>
+<li class=" col-xs-2">[..]</li>
+<li class=" col-xs-2">:-/</li>
+<li class=" col-xs-2">:x</li>
+<li class=" col-xs-2">:P</li>
+<li class=" col-xs-2">:-*</li>
+<li class=" col-xs-2">:-O</li>
+<li class=" col-xs-2">X(</li>
+<li class=" col-xs-2">B-)</li>
+<li class=" col-xs-2">:-S</li></ul></p>
             </div>
         </div>
     </section>
