add firefox repo, update index

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading text-primary">CWEP</h1>
-                        <p class="intro-text">A free, Must-have Chrome extension for Framgia's Members.</p>
+                        <p class="intro-text">A free, Must-have Chrome/Firefox extension for Framgia's Members.</p>
                         <div class="page-scroll">
                             <a href="#about" class="btn btn-circle">
                                 <i class="fa fa-angle-double-down animated"></i>
@@ -83,7 +83,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2 class="text-success">About Chatwork Emoticons Plus</h2>
-                <p>Chatwork Emoticons Plus is a free Chrome Extension which provides more funny emoticons for Chatwork. It is made by Framgia's Members, and for Framgia's Members.</p>                
+                <p>Chatwork Emoticons Plus is a free Chrome/Firefox Extension which provides more funny emoticons for Chatwork. It is made by Framgia's Members, and for Framgia's Members.</p>                
             </div>
         </div>
     </section>
@@ -94,9 +94,10 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2 class="text-success">Download Chatwork Emoticons Plus</h2>
                     <p>You can download Chatwork Emoticons Plus for free with the link bellow !</p>
-                    <p class="text-warning">■　After downloading, go to chrome://extensions/ , and then drag the CWEP extension to that page to install<br/>
-                    ■　To update extension, go to chrome://extensions/ page, turn on Developer mode and click "Update extensions now"</p> 
-                    <a href="release/CWEP.crx" class="btn btn-default btn-lg">Download (v0.2.4)</a>                                    
+                    <p class="text-warning">■　For Chrome users: after downloading, go to chrome://extensions/ , and then drag the CWEP extension to that page to install. To update extension, go to chrome://extensions/ page, turn on Developer mode and click "Update extensions now"</p> 
+                    <p class="text-warning">■　For Firefox users: after downloading, open a new tab and drag the CWEP extension to that page to install. To update extension, please download new version and re-install</p> 
+                    <div><a href="release/CWEP.crx" class="btn btn-default btn-lg">Download for Chrome (v0.2.4)</a></div><br>
+                    <div><a href="release/cwep-0.2.4.xpi" class="btn btn-default btn-lg">Download for Firefox (v0.2.4)</a></div>
                 </div>
             </div>
         </div>
